# chess-coach

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
apps/desktop/: package-lock.json  package.json
apps/desktop/scripts/: build-check.js  start.js
apps/desktop/src/: main.js  native.js  preload.js  server.js
apps/desktop/src/common/: commands.js  validation.js
apps/desktop/src/renderer/: app.js  index.html  styles.css
apps/desktop/test/: desktop.test.js  server.test.js
apps/web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
apps/web/src/app/: AppShell.tsx  theme.test.ts  theme.ts
apps/web/static/: app.js  index.html  styles.css
chess_coach/: __init__.py  annotated_pgn.py  cli.py  coach_prompt.py  config.py  flashcards.py  gui_support.py  history.py  lichess_import.py  lichess_study.py  maia2_analyser.py  models.py  openings.py  pattern_detector.py  pgn_parser.py  pipeline.py  position_export.py  report_writer.py  stockfish_analyser.py  training_plan.py  web_app.py  web_server.py  weekly_review.py
chess_coach/legacy_static/: app.js  index.html
chess_coach/web_dist/: index.html
chess_coach/web_dist/assets/: index-Burp1SNd.js  index-DcOar8AL.css
docs/: licensing.md  runtime.md  windows-smoke-checklist.md
docs/implementation-plans/: 2026-06-17-lichess-study-create-import.md  2026-06-18-electron-desktop-gui.md
input/: sample_games.pgn
scripts/: analyse_pgns.py  run_report.sh  run_web_gui.py  run_weekly_review.sh  setup_wsl.sh
tests/: test_annotated_pgn.py  test_cli.py  test_config.py  test_flashcards.py  test_gui_support.py  test_history.py  test_lichess_import.py  test_lichess_study.py  test_maia2_analyser.py  test_openings.py  test_pattern_detector.py  test_pgn_parser.py  test_position_export.py  test_release_readiness.py  test_report_writer.py  test_runtime_scripts.py  test_stockfish_analyser.py  test_training_plan.py  test_v1_workflow.py  test_web_app.py  test_web_server.py  test_web_static.py  test_weekly_review.py
(+37 files in other folders)
