[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-chess-coach"
version = "1.0.0"
description = "PGN in, Stockfish/mock analysis JSON out, Obsidian-friendly coaching Markdown out."
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
dependencies = ["python-chess>=1.999", "pydantic>=2.6", "fastapi>=0.115", "uvicorn>=0.30"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx2>=2.4"]
maia2 = [
    "maia2>=0.9",
    "gdown>=5.2.0",
    "einops>=0.8.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "torch>=2.4.0",
    "tqdm>=4.65.0",
    "pyzstd>=0.15.9",
    "PyYAML>=6.0",
]

[project.scripts]
chess-coach = "chess_coach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chess_coach*"]

[tool.setuptools.package-data]
chess_coach = ["web_dist/**", "legacy_static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
